[package]
name = "polars-mem-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "In memory engine of the Polars project."

[dependencies]
arrow = { workspace = true }
futures = { workspace = true, optional = true }
memmap = { workspace = true }
polars-core = { workspace = true, features = ["lazy"] }
polars-error = { workspace = true }
polars-expr = { workspace = true }
polars-io = { workspace = true, features = ["lazy"] }
polars-json = { workspace = true, optional = true }
polars-ops = { workspace = true, features = ["chunked_ids"] }
polars-plan = { workspace = true }
polars-time = { workspace = true, optional = true }
polars-utils = { workspace = true }
pyo3 = { workspace = true, optional = true }
rayon = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
async = [
  "polars-plan/async",
  "polars-io/cloud",
]
python = ["pyo3", "polars-plan/python", "polars-core/python", "polars-io/python"]
ipc = ["polars-io/ipc", "polars-plan/ipc"]
json = ["polars-io/json", "polars-plan/json", "polars-json"]
csv = ["polars-io/csv", "polars-plan/csv"]
cloud = ["async", "polars-plan/cloud", "tokio", "futures"]
parquet = ["polars-io/parquet", "polars-plan/parquet"]
temporal = [
  "dtype-datetime",
  "dtype-date",
  "dtype-time",
  "dtype-i8",
  "dtype-i16",
  "dtype-duration",
  "polars-plan/temporal",
]
dtype-array = ["polars-plan/dtype-array", "polars-ops/dtype-array"]
dtype-categorical = ["polars-plan/dtype-categorical"]
dtype-date = ["polars-plan/dtype-date", "polars-time/dtype-date", "temporal"]
dtype-datetime = ["polars-plan/dtype-datetime", "polars-time/dtype-datetime", "temporal"]
dtype-decimal = ["polars-plan/dtype-decimal"]
dtype-duration = ["polars-plan/dtype-duration", "polars-time/dtype-duration", "temporal"]
dtype-i16 = ["polars-plan/dtype-i16"]
dtype-i8 = ["polars-plan/dtype-i8"]
dtype-struct = ["polars-plan/dtype-struct", "polars-ops/dtype-struct"]
dtype-time = ["polars-plan/dtype-time", "polars-time/dtype-time", "temporal"]
dtype-u16 = ["polars-plan/dtype-u16"]
dtype-u8 = ["polars-plan/dtype-u8"]
object = ["polars-core/object"]
dynamic_group_by = ["polars-plan/dynamic_group_by", "polars-time", "temporal", "polars-expr/dynamic_group_by"]
asof_join = ["polars-plan/asof_join", "polars-time", "polars-ops/asof_join"]
cse = ["polars-plan/cse"]
