[package]
name = "polars-ooc"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Out-of-core processing support for Polars"

[dependencies]
boxcar = { workspace = true }
parking_lot = { workspace = true }
polars-config = { workspace = true }
polars-core = { workspace = true, features = ["algorithm_group_by"] }
polars-utils = { workspace = true, features = ["sysinfo"] }
slotmap = { workspace = true }

[target.'cfg(any(not(target_family = "unix"), target_os = "emscripten"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

# Feature background_threads is unsupported on MacOS (https://github.com/jemalloc/jemalloc/issues/843).
[target.'cfg(all(target_family = "unix", not(target_os = "macos"), not(target_os = "emscripten")))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["disable_initial_exec_tls", "background_threads"] }

[target.'cfg(all(target_family = "unix", target_os = "macos"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["disable_initial_exec_tls"] }

[lints]
workspace = true

[features]
default_alloc = []
