[package]
name = "polars-ops"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "More operations on Polars data structures"

[dependencies]
polars-core = { workspace = true, features = ["algorithm_group_by"] }
polars-error = { workspace = true }
polars-json = { workspace = true, optional = true }
polars-utils = { workspace = true }

ahash = { workspace = true }
argminmax = { version = "0.6.1", default-features = false, features = ["float"] }
arrow = { workspace = true }
base64 = { workspace = true, optional = true }
bytemuck = { workspace = true }
chrono = { workspace = true, optional = true }
chrono-tz = { workspace = true, optional = true }
either = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true, optional = true }
indexmap = { workspace = true }
jsonpath_lib = { version = "0.3", optional = true, git = "https://github.com/ritchie46/jsonpath", branch = "improve_compiled" }
memchr = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true, optional = true, features = ["small_rng", "std"] }
rand_distr = { workspace = true, optional = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
smartstring = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[build-dependencies]
version_check = { workspace = true }

[features]
simd = ["argminmax/nightly_simd"]
nightly = ["polars-utils/nightly"]
dtype-categorical = ["polars-core/dtype-categorical"]
dtype-date = ["polars-core/dtype-date", "polars-core/temporal"]
dtype-datetime = ["polars-core/dtype-datetime", "polars-core/temporal"]
dtype-time = ["polars-core/dtype-time", "polars-core/temporal"]
dtype-duration = ["polars-core/dtype-duration", "polars-core/temporal"]
dtype-struct = ["polars-core/dtype-struct", "polars-core/temporal"]
dtype-u8 = ["polars-core/dtype-u8"]
dtype-u16 = ["polars-core/dtype-u16"]
dtype-i8 = ["polars-core/dtype-i8"]
dtype-i16 = ["polars-core/dtype-i16"]
dtype-array = ["polars-core/dtype-array"]
dtype-decimal = ["polars-core/dtype-decimal"]
object = ["polars-core/object"]
propagate_nans = []
performant = ["polars-core/performant", "fused"]
big_idx = ["polars-core/bigidx"]
round_series = []
is_first_distinct = []
is_last_distinct = []
is_unique = []
unique_counts = []
approx_unique = []
fused = []
cutqcut = ["dtype-categorical", "dtype-struct"]
rle = ["dtype-struct"]
timezones = ["chrono-tz", "chrono"]
random = ["rand", "rand_distr"]
rank = ["rand"]

# extra utilities for BinaryChunked
binary_encoding = ["base64", "hex"]
string_encoding = ["base64", "hex"]

# ops
to_dummies = []
interpolate = []
list_to_struct = ["polars-core/dtype-struct"]
list_count = []
diff = []
pct_change = ["diff"]
strings = ["polars-core/strings"]
string_pad = ["polars-core/strings"]
string_to_integer = ["polars-core/strings"]
extract_jsonpath = ["serde_json", "jsonpath_lib", "polars-json"]
log = []
hash = []
zip_with = ["polars-core/zip_with"]
group_by_list = ["polars-core/group_by_list"]
rolling_window = ["polars-core/rolling_window"]
moment = []
mode = []
search_sorted = []
merge_sorted = []
top_k = []
pivot = ["polars-core/reinterpret"]
cross_join = []
chunked_ids = ["polars-core/chunked_ids"]
asof_join = ["polars-core/asof_join"]
semi_anti_join = []
list_gather = []
list_sets = []
list_any_all = []
list_drop_nulls = []
list_sample = []
extract_groups = ["dtype-struct", "polars-core/regex"]
is_in = ["polars-core/reinterpret"]
convert_index = []
repeat_by = []
peaks = []
cum_agg = []
ewma = []
abs = []
cov = []
